--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                             ">
                     <div class="image-container">
                         <div class="media">
-                            <img class="lazyloaded"
+                            <img class="lazyloaded img-fluid"
                                 src="public/images/singlebanner.webp">
                         </div>
                     </div>
